--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,12 +2,12 @@ server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
-    root   /var/www/html/public;
-    index  index.html index.htm index.php;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        root   /var/www/html/public;
+        index  index.html index.htm index.php;
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
@@ -34,6 +34,13 @@ server {
        fastcgi_index  index.php;
        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
        include        fastcgi_params;
+    }
+
+    location ~ \.css {
+        add_header Content-Type text/css;
+    }
+    location ~ \.js {
+        add_header Content-Type application/x-javascript;
     }
 
     # deny access to .htaccess files, if Apache's document root
